tests/Driver/cannot-open-file.sora
// RUN: %sorac blargh.sora | %filecheck %s
// CHECK: error: could not load input file 'blargh.sora'